# gtr-cli

./: CLAUDE.md  Cargo.toml  README.md  build.rs  test_divider.long-type-6912895430138126647.txt
.github/workflows/: release.yml
docs/: ROADMAP.md  TUI-PROPOSAL.md  ui-style.md
scripts/: install.sh.template
src/: cache.rs  client.rs  config.rs  display.rs  editor.rs  error.rs  hierarchy.rs  icons.rs  labels.rs  lib.rs  local.rs  logging.rs  main.rs  markdown.rs  models.rs  mutations.rs  promotion.rs  resolve.rs  slug.rs  sync.rs  threshold_cache.rs  urgency.rs  utils.rs
src/commands/: config.rs  create.rs  deadline.rs  delete.rs  doing.rs  done.rs  feels.rs  init.rs  later.rs  list.rs  log.rs  mod.rs  move_task.rs  namespace.rs  next.rs  now.rs  pkms.rs  progress.rs  project.rs  promotion.rs  reference.rs  restore.rs  search.rs  show.rs  start.rs  status.rs  stop.rs  sync.rs  undone.rs  update.rs  version.rs
src/crdt/: document.rs  mod.rs  pkms_document.rs
src/output/: mod.rs
src/references/: mod.rs  parser.rs  resolver.rs
src/storage/: config.rs  migration.rs  mod.rs
src/tui/: app.rs  command_bar.rs  confirm.rs  create_form.rs  dashboard.rs  doc_detail.rs  doc_editor.rs  doc_form.rs  doc_list.rs  entity_form.rs  feels.rs  help.rs  inline_editor.rs  keymap.rs  label_autocomplete.rs  mod.rs  move_form.rs  nav.rs  progress.rs  project_picker.rs  ref_picker.rs  search.rs  sidebar.rs  task_detail.rs  task_editor.rs  task_list.rs  theme.rs
src/url_fetch/: generic.rs  mod.rs
