[package]
name = "gtr"
version = "0.3.0"
edition = "2024"
rust-version = "1.89"
authors = ["Joao Eduardo Luis <joao@abysmo.tech>"]
description = "CLI client for Getting Things Rusty - ADHD-friendly task tracker"
license = "AGPL-3.0-or-later"
repository = "https://github.com/yourusername/get-things-rusty-cli"

[[bin]]
name = "gtr"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "cargo"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pretty output
tabled = { version = "0.20", features = ["ansi"] }
colored = "3.0"
termimad = "0.34"
crossterm = "0.29"
dialoguer = "0.12"
terminal_size = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
toml = "1.0"
directories = "6.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
chrono-humanize = "0.2"
jiff = { version = "0.2", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["serde", "v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Editor integration
tempfile = "3.8"
which = "8.0"

# Local storage and CRDT
automerge = "0.7.3"
rusqlite = { version = "0.32", features = ["bundled"] }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
